added controller for posting af-parts
