# car-part-core-micro/src/main/java/com/gini/controller/AfController.java
@@ -1,15 +1,19 @@
 package com.gini.controller;
 
+import com.gini.api.AfPartApi;
+import com.gini.dto.AfPartRequest;
+import com.gini.dto.AfPartResponse;
 import com.gini.repository.filters.CarFilter;
 import com.gini.service.AfPartService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
-public class AfController {
+public class AfController implements AfPartApi {
 
     private final AfPartService afPartService;
 
@@ -18,4 +22,9 @@ public class AfController {
         afPartService.getAfPart(carFilter);
     }
 
+    @Override
+    public ResponseEntity<AfPartResponse> createAfPart(AfPartRequest afPartRequest) {
+        var afPartresponse = afPartService.saveAfPart(afPartRequest);
+        return ResponseEntity.ok(afPartresponse);
+    }
 }
